# steuer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  exemplo.env  pyproject.toml
steuer/: __main__.py
