[tool.poetry]
name = "steuer"
version = "0.1.0"
description = "Bot para emitir notas fiscais"
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = {version = "^5.3"}
pre-commit = {version = "^2.0"}
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pylint = "^2.4"
ipython = "^7.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
